<resources>
    <string name="app_name">JustJobs</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="working_day">
        <item><font fgcolor='#a9a9a9'>Select Working Days</font></item>
        <item>1 day a week</item>
        <item>2 day a week</item>
        <item>3 day a week</item>
        <item>4 day a week</item>
        <item>5 day a week</item>
        <item>6 day a week</item>
        <item>7 day a week</item>
    </string-array>
    <string name="gender">Gender<font fgcolor='#FF0000'>*</font></string>
    <string-array name="emp_size">
        <item>1 TO 10</item>
        <item>1 TO 100</item>
        <item>1 TO 1000</item>
        <item>1 TO 10000</item>
        <item>1 TO 100000</item>
    </string-array>
    <string-array name="salary_type">
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>
    <string name="experience">Experience<font fgcolor='#FF0000'>*</font></string>
    <string-array name="role_select">
        <item><font fgcolor='#a9a9a9'>Select Category First</font></item>
    </string-array>
    <string name="expandable_title_one"><b>Consultancy(Asking for money)</b></string>
    <string name="expandable_text_one">JustJobsHR is 100% free.Please do not give any money to company. You can report this to us by clicking on "Report Issue" in the job details and mark "Asking Money".</string>
    <string name="expandable_title_two"><b>Fake / Fraud company</b></string>
    <string name="expandable_text_two">JustJobsHR is 100% free.Please do not give any money to company.If you feel that the company is fraud or fake, you can report this to us by clicking on <b>"Report Issue"</b> in the job details and mark <b>"Asking Money"</b>.</string>
    <string name="expandable_title_three"><b>How to change my mobile number</b></string>
    <string name="expandable_text_three">Mobile number cannot be changed for JustJobsHR account. In Order to have your account with different mobile number, please logout from current account and create a new account with different mobile number.</string>
    <string name="expandable_title_four"><b>Vacancy full</b></string>
    <string name="expandable_text_four">If the company says that the vacancy is full, then you can report this to us by clicking on "Report Issues" in the job details and mark "Vacancy full".</string>
    <string name="full_name">Full Name<font fgcolor='#FF0000'>*</font></string>
    <string name="date_of_birth">Date Of Birth<font fgcolor='#FF0000'>*</font></string>
    <string name="contact_number">Contact Number<font fgcolor='#FF0000'>*</font></string>
    <string name="Area_location">Location<font fgcolor='#FF0000'>*</font></string>
    <string name="state">State<font fgcolor='#FF0000'>*</font></string>
    <string name="city">City<font fgcolor='#FF0000'>*</font></string>
    <string name="job_profile_1">Job Profile Primary<font fgcolor='#FF0000'>*</font></string>
    <string name="qualification">Qualification<font fgcolor='#FF0000'>*</font></string>
    <string name="english_communication">English Communication<font fgcolor='#FF0000'>*</font></string>
    <string name="languages_knows">Languages Knows<font fgcolor='#FF0000'>*</font></string>
    <string name="employment_type">Employment Type<font fgcolor='#FF0000'>*</font></string>
    <string name="location_type">Location Type<font fgcolor='#FF0000'>*</font></string>
    <string name="has_vehicle">Vehicle<font fgcolor='#FF0000'>*</font></string>
    <string name="has_driving_licence">Driving Licence<font fgcolor='#FF0000'>*</font></string>
    <string name="has_documents">Documents<font fgcolor='#FF0000'>*</font></string>
    <string name="skill">Skill <font fgcolor='#FF0000'>*</font></string>
    <string name="reference">Reference <font fgcolor='#FF0000'>*</font></string>
    <string name="cv_resume">CV / Resume</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_cnd_registeration">CndRegisterationActivity</string>
    <string name="tip_qa1">
        Tell me something about yourself in brief \n\n

        “Thank you, Sir/Ma’am for this opportunity. I am from XYZ City and belong to a nuclear family. My father is a Central Government Employee and my mother is a Vice Principal at a private school. My younger sister will appear her CBSE 10th board this year. We are a very close-knit family. On an individual front, I perceive myself as a confident, conscientious and hardworking individual. I carry out any task assigned to me without hesitation, provided the instructions are clear. In the case of doubts, I never hesitate to put forth my questions. I have always been a fast learner, and I love to keep up my process of learning to figure out better ways of solving problems. Moreover, I love to compete with my own past performances than competing with my peers, as I believe that improvement is always better than perfection!”
    </string>
    <string name="tip_qa2">
        Describe who you are. or Tell me about your background.\n\n

        “I am a B. Tech in Computer Science/B. Com in Economics. I also have an MBA or I have completed a certification course in Digital Marketing from ABC Academy. What else would you like to know?”
    </string>
    <string name="tip_qa3">
        What are your strengths and weaknesses?\n\n

        “I have several strengths namely – I am patient, committed, honest and self-motivated. I am the biggest dreamer I have ever come across! I forgive easily and hate to keep grudges in my heart. My greatest weakness is that I don\'t like getting interrupted when I am seriously into something. Another one of my weaknesses is that I trust people very easily. As I already said, I am a very patient person, so I am actively working on this lacuna.”
    </string>
    <string name="tip_qa4">
        You have not done your PG yet. This is not a drawback, but don’t you think you should get a PG degree asap?\n\n

        “As soon as I graduated, I felt the urge to start working in the real world. It’s not that I am a total novice. I have undergone 3 internships, of which 2 are paid from reputed organizations. This credential has helped me land an offer from one of those firms. I sometimes wonder whether I should have first completed my post-graduation. Had I done so, I wouldn’t have been able to develop my complete portfolio. And I am hoping that my track record will help me get selected for this position in your esteemed organization.”
    </string>
    <string name="tip_qa5">
        You have changed jobs/jumped ship too many times already, why so?\n\n

        “You may label me a ‘frequent career-changer’ but I genuinely feel that today I am a far better employee. My switches have helped me develop better interpersonal skills, gain diverse skills and adapt to rapidly changing business environments. I can solve problems more efficiently and creatively, as I have learned to live with ambiguity and uncertainty. My first job helped me develop patience. My second job helped me master spreadsheets and numbers. My third job helped me develop better people skills and also adjust amidst culturally diverse and geographically dispersed teams. All in all, I feel that my varied background makes me an ideal candidate for this job role today.”
    </string>
    <string name="tip_qa6">
        What are your strong points? or What are your strengths?\n\n

        “I have the requisite skills to make your risk worth it. Chatting less and letting my work do the talking, is my motto. In the past, whatever project was assigned to me was delivered on time and also at par with all the quality standards.”
    </string>
    <string name="tip_qa7">
        What is your greatest fear?\n\n

        “I work too hard sometimes and care too much about my work. I take my tasks back home and work even during the weekends. You can call me a workaholic, but my family always points out that this is not right. Slowly and steadily I am realizing that speed and working smartly are the key. So, I have begun to reach out to my colleagues for ready-to-use workarounds so that I can give more time to my family.”
    </string>
    <string name="tip_qa8">
        If I call up your current or previous reporting manager now, what will be their opinion about you? What will they say that you need to work on?\n\n

        “Interesting. During my last performance review, my boss did not list any areas of improvement and gave me an outstanding rating. However, if I were to think of one, I would guess that I need to speak up more during meetings. I always have good ideas and contribute my thoughts to my current project. But I discuss these ideas with my boss and let him do all the talking during meetings. I should work on speaking up more during brainstorming sessions.”
    </string>
    <string name="tip_qa9">
        Do you have any serious medical issues?\n\n

        “I am partially color blind. Sometimes I face difficulty in distinguishing between colors. For example, I cannot see shades or tones of the same color. But for your information, no adjustments would be required on your part to accommodate this minor disability. As you can see from my resume, it does not have any impact on my ability to get the job done.”
    </string>
    <string name="tip_qa10">
        Did you ever have a conflict with your current/previous boss or professor?\n\n

        “Recently I had a disagreement with one of my professors about a question that was out of syllabus in one of the semester exams. It was not a major one, but yes I will label it a ‘conflict’. Most of my friends and peers did not attempt this question due to ambiguity. When I brought the cause into my professor’s notice in private, he remained cold and unconcerned. So, I and my batchmates had a discussion following which, we went to him together. At that point, our professor agreed that the question was ambiguous, but he refused to give us grace marks for the same. I felt disappointed because he did not appreciate the fact that I brought the situation earlier, into his notice in private. Besides, he did not suggest an alternative paper or project work, with which students could make up for the lost marks.”
    </string>
    <string name="tip_qa11">
        What do your friends/co-workers say about you?\n\n

        “I recently completed my internship at Tata Steel Ltd., Tata Center, Kolkata. My project lead told me that in the beginning, I was a little lost, but by the end of the summer internship program, she knew that she could count on me.”
    </string>
    <string name="tip_qa12">
        What did you do in the last year to improve your knowledge?\n\n

        “In 2016, I was in the final year of college. During that time, I did three things to improve my knowledge. 1. I got myself enrolled in Aptech for the Sun Certified Java Programmer course. I will appear my exam soon. 2. I have bought magazine subscriptions such as Dataquest. These magazines help me to stay well informed about new topics in the IT world. 3. I completed my final year application project based on Java. The topic was Centralized Remote Based College Information Scheme.”
    </string>
    <string name="job_role">Job Role <font fgcolor='#FF0000'>*</font></string>
    <string name="job_role_designation">Job Role Designation <font fgcolor='#FF0000'>*</font></string>
    <string name="job_type">Job Type <font fgcolor='#FF0000'>*</font></string>
    <string name="enter_state">Enter State <font fgcolor='#FF0000'>*</font></string>
    <string name="enter_city">Enter City <font fgcolor='#FF0000'>*</font></string>
</resources>