<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Company.CompanyPostJob.PoJo1Fragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Post Job Title"
                android:textColor="?attr/primaryTitleColor"
                android:textSize="22sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="Job Title"
                        android:textColor="?attr/primaryTitleColor"
                        android:textSize="22sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/MyTextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/pj_et_title"
                            style="@style/MyTextInputEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                            android:drawableEnd="@drawable/ic_baseline_title_24"
                            android:hint="Job Title"
                            android:inputType="textPersonName"
                            android:padding="10dp" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/job_role"
                        android:textColor="?attr/primaryTitleColor"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/pj_sp_role"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/ll_cnd_edit_state"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/text_view_border"
                        android:drawableStart="@drawable/ic_work"
                        android:drawablePadding="10dp"
                        android:padding="10dp"
                        android:text="Job Role"
                        android:textColor="?attr/primaryTitleColor"
                        android:textSize="16sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/pj_et_other_role"
                        style="@style/MyTextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:visibility="gone">

                        <com.google.android.material.textfield.TextInputEditText
                            style="@style/MyTextInputEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                            android:hint="Other Role"
                            android:inputType="textPersonName"
                            android:padding="10dp" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/job_role_designation"
                        android:textColor="?attr/primaryTitleColor"
                        android:textSize="20sp" />

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/pj_sp_designation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/spinner_bg"
                        android:clickable="false"
                        android:entries="@array/designation_spinner"
                        android:padding="10dp"
                        android:theme="@style/SpinnerThemeLight_new" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/job_type"
                        android:textColor="?attr/primaryTitleColor"
                        android:textSize="20sp" />

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/pj_sp_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/spinner_bg"
                        android:clickable="false"
                        android:entries="@array/Job_Type"
                        android:padding="10dp"
                        android:theme="@style/SpinnerThemeLight_new" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/enter_state"
                        android:textColor="?attr/primaryTitleColor"
                        android:textSize="20sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/MyTextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <AutoCompleteTextView
                            android:id="@+id/pj_ac_state"
                            style="@style/MyTextInputEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:drawableEnd="@drawable/ic_baseline_title_24"
                            android:drawablePadding="10dp"
                            android:hint="Enter state"
                            android:inputType="textPersonName"
                            android:padding="10dp"
                            android:textColor="?attr/primaryTitleColor"
                            android:textColorHint="@color/dark_gray"
                            android:textSize="18sp" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/enter_city"
                        android:textColor="?attr/primaryTitleColor"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/pj_ac_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/ll_cnd_edit_state"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/text_view_border"
                        android:drawableStart="@drawable/ic_work"
                        android:drawablePadding="10dp"
                        android:padding="10dp"
                        android:text="City"
                        android:textColor="?attr/primaryTitleColor"
                        android:textSize="18sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/pj_ib_1_submit"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="20dp"
                    android:padding="2dp"
                    android:src="@drawable/ic_next_page" />
            </RelativeLayout>
        </LinearLayout>

    </ScrollView>

</FrameLayout>